<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_robot_drawer</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="daniel@todo.todo">daniel</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <exec_depend>geometry_msgs</exec_depend>
  <depend>turtlesim</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
